Added mag and mesh for mumax example

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ img/**
 *.vtk
 /*.ipynb
 examples/*.png
+!examples/*.vtu
+!examples/*.csv
+!examples/*.msh
 docs/xmcd_projection*
 docs/examples.*.rst
 docs/README.*
