added static docs files

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,8 @@ examples/*.png
 docs/xmcd_projection*
 docs/examples.*.rst
 docs/README.*
-docs/_static/*
+docs/_static/examples/*
+!docs/_static/*.png
 docs/.deps
 
 # Byte-compiled / optimized / DLL files
